Replace GSON to Jackson (jackson already fetch by some dependency, GSON is attached manually), its reduced final jar size. Add to prototypes ability to extend parent prototype (simple hierarchy).