@@ -41,7 +41,6 @@
         <commons-net.version>3.6</commons-net.version>
         <guava.version>30.1.1-jre</guava.version>
         <guice.version>5.0.1</guice.version>
-        <gson.version>2.8.6</gson.version>
         <hibernate.version>5.5.0.Final</hibernate.version>
         <postgresql.version>42.2.20</postgresql.version>
         <redisson.version>3.16.3</redisson.version>
@@ -57,6 +56,7 @@
         <manifold.version>2022.1.11</manifold.version>
         <fastutil.version>8.5.8</fastutil.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <jackson.version>2.12.5</jackson.version>
     </properties>
 
     <repositories>
@@ -196,11 +196,6 @@
                 <version>${javax.annotation-api.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>${gson.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
                 <version>${hibernate.version}</version>
@@ -289,10 +284,10 @@
                 <artifactId>finex-evolution</artifactId>
                 <version>${finex-evolution.version}</version>
                 <exclusions>
-                    <exclusion>
+                    <!--<exclusion>
                         <groupId>com.google.code.gson</groupId>
                         <artifactId>gson</artifactId>
-                    </exclusion>
+                    </exclusion>-->
                     <exclusion>
                         <groupId>com.google.guava</groupId>
                         <artifactId>guava</artifactId>
@@ -355,6 +350,13 @@
                 <groupId>it.unimi.dsi</groupId>
                 <artifactId>fastutil</artifactId>
                 <version>${fastutil.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson</groupId>
+                <artifactId>jackson-bom</artifactId>
+                <version>${jackson.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -441,8 +443,8 @@
                     <version>1.18.20.0</version>
                     <configuration>
                         <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
-                        <outputDirectory>${delombok.source}</outputDirectory>
-                        <addOutputDirectory>false</addOutputDirectory>
+                        <!--<outputDirectory>${delombok.source}</outputDirectory>-->
+                        <!--<addOutputDirectory>false</addOutputDirectory>-->
                         <encoding>UTF-8</encoding>
                     </configuration>
                     <executions>
@@ -464,6 +466,33 @@
                                 <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                             </manifest>
                         </archive>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>3.3.1</version>
+                    <executions>
+                        <execution>
+                            <id>attach-javadocs</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <additionalOptions>--enable-preview --add-modules jdk.incubator.vector --add-modules jdk.incubator.foreign</additionalOptions>
+                        <sourcepath>${delombok.source}</sourcepath>
+                        <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
+                        <docletArtifact>
+                            <groupId>nl.talsmasoftware</groupId>
+                            <artifactId>umldoclet</artifactId>
+                            <version>2.0.17</version>
+                        </docletArtifact>
+                        <useStandardDocletOptions>true</useStandardDocletOptions>
+                        <additionalOptions>
+                            <!-- https://github.com/gboersma/uml-java-doclet#diagram-options -->
+                        </additionalOptions>
                     </configuration>
                 </plugin>
                 <plugin>
